fixed text align of h1

--- a/css/about.css
+++ b/css/about.css
@@ -317,14 +317,13 @@ p,
 
 @media (max-width: 800px) {
   .h1Mission {
-    top: 14%;
+    top: 30%;
     width: 80%;
   }
 }
 
 @media (max-width: 500px) {
   .h1Mission {
-    width: 100%;
     border-bottom: none;
   }
 
